apps/openklant/additionalmanifests/local/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: openklant
  namespace: publicground
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: gateway-local
      namespace: envoy-gateway-system
      sectionName: http
  hostnames:
    - "openklant.wigo4it.nl"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - group: ""
          kind: Service
          name: openklant-nginx
          port: 80
          weight: 1
